12 July 2024: Yorgos
	- Add RPZ tag tests in acl_interface.tdir.
	- For #1102: clearer text for using interface-* options for the
	  loopback interface.

12 July 2024: Wouter
	- Fix #1103: unbound 1.20.0 segmentation fault with nghttp2.
	- For #1103: fix to also drop mesh state reference when a h2 reply is
	  dropped.

10 July 2024: Wouter
	- For #773: In contrib/unbound.service.in set unbound to start after
	  network-online.target. Also for contrib/unbound_portable.service.in.

9 July 2024: Yorgos
	- Update list of known EDE codes.

8 July 2024: Wouter
	- Fix that validation reason failure that uses string print uses
	  separate buffer that is passed, from the scratch validation buffer.
	- Fixup algo_needs_reason string buffer length.
	- Fix shadowed error string variable in validator dnskey handling.

5 July 2024: Yorgos
	- Don't check for message TTL changes if the RRsets remain the same.

5 July 2024: Wouter
	- Fix for neater printout for error for missing DS response.
	- Fix neater printout.
	- Fix #1099: Unbound core dump on SIGSEGV.
	- Fix for #1099: Fix to check for deleted RRset when the contents
	  is updated and fetched after it is stored, and also check for a
	  changed RRset.

4 July 2024: Wouter
	- Fix to print details about the failure to lookup a DNSKEY record
	  when validation fails due to the missing DNSKEY. Also for key prime
	  and DS lookups.

3 July 2024: Yorgos
	- Fix for repeated use of a DNAME record: first overallocate and then
	  move the exact size of the init value to avoid false positive heap
	  overflow reads from address sanitizers.

3 July 2024: Wouter
	- Fix #144: Port ipset to BSD pf tables.
	- Add unit test skip files and bison and flex output to gitignore.
	- Fix to use modstack_init in zonemd unit test.
	- Fix to remove unneeded linebreak in fptr_wlist.c.
	- Fix compile warnings in fptr_wlist.c.

2 July 2024: Wouter
	- Fix to remove unused include from the readzone test program.